welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: Missing closing brace `}' assumed here
droite()
^